[package]
name = "diaryx_import_extism"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["markdown-import"]
markdown-import = ["diaryx_core/import-markdown"]

[dependencies]
diaryx_core = { version = "1.3.0", features = ["import-dayone"] }
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"
getrandom_03 = { package = "getrandom", version = "0.3", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
