[package]
name = "diaryx_import_extism"
version = "0.1.2"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["markdown-import"]
markdown-import = ["diaryx_core/import-markdown"]

[dependencies]
diaryx_core = { git = "https://github.com/diaryx-org/diaryx.git", subdirectory = "crates/diaryx_core", version = "1.3.1", features = ["import-dayone"] }
diaryx_plugin_sdk = { git = "https://github.com/diaryx-org/plugin-sdk.git", features = ["core", "files", "getrandom-shim"] }
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"

[profile.release]
lto = "fat"
codegen-units = 1
